--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@
 .logo{
     font-size: 1.2rem;
     font-weight: 600;
-    color: black;
+    color: #4b2929;
     z-index: 1;
 }
 .nav_group{
@@ -34,7 +34,7 @@
     align-items: center;
     list-style: none;
     gap: 3rem;
-    color: black;
+    color: #4b2929;
     font-size: 1rem;
     font-weight: 500;
     height: 100%;
@@ -47,8 +47,8 @@
 }
 .ctn{
     background-color: transparent;
-    color: black;
-    border: 1px solid black;
+    color: #4b2929;
+    border: 1px solid #4b2929;
     border-radius: .4rem;
     font-size: 1rem;
     font-weight: 400;
@@ -67,7 +67,65 @@
 .toogle{
     display: none;
 }
+.side_1--hero{
+    display: grid;
+    place-content: center;
+    margin-top: -2rem;
+    place-items: start;
 
+}
+.hero{
+    padding: 4rem 1rem;
+    color: rgb(75, 41, 41);
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    place-content: center;
+    gap: 2rem;
+}
+.side_1--hero h1{
+    font-size: 3.2rem;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: 500;
+    padding-bottom: 1rem;
+    
+
+}
+.side_1--hero p{
+    font-size: 1.1rem;
+    line-height: 1.6;
+    padding-bottom: .5rem;
+}
+.action-btn{
+    white-space: nowrap;
+    background-color: rgb(75, 41, 41);
+    padding: .5rem 2.5rem;
+    width: auto;
+    color: white;
+    font-weight: 600;
+    border: none;
+    border: 1px solid transparent ;
+    transition: all .15s ease-in;
+}
+.action-btn:hover{
+    background-color: transparent;
+    border-color: #4b2929;
+    color: #4b2929;
+    box-shadow: 0px 0px 10px #4b2929 ;
+}
+.side_2--hero{
+    display: grid;
+    position: relative;
+    place-content: center;
+
+}
+.side_2--hero img{
+    display: inline-flex;
+    width: 480px;
+    height: 490px;
+    justify-self: center;
+    border-bottom-left-radius: 7rem ;
+}
+/* media query for 968px */
 @media screen and (max-width:968px ) {
 .app{
     padding: .7rem 1.5rem;
