--- a/src/index.css
+++ b/src/index.css
@@ -2,25 +2,26 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    overflow: hidden;
     scroll-behavior: smooth;
 }
 .app{
-    padding: 1rem 7rem;
-    background-color: #EEDDCC;
+    padding: 0rem 0;
+    background-color: #ffff;
 }
 .nav__container{
+    padding: 1rem 7rem;
     width: 100%;
     display: flex;
     align-items: center;
+    background-color: #EEDDCC;
     justify-content: space-between;
     height: 100%;
 }
 .logo{
     font-size: 1.2rem;
-    font-weight: 600;
+    font-weight:800;
     color: #4b2929;
-    z-index: 1;
+    z-index: 2;
 }
 .nav_group{
     display: flex;
@@ -67,6 +68,17 @@
 .toogle{
     display: none;
 }
+
+.hero{
+    padding: 4rem 4rem 4rem 8rem;
+    color: rgb(75, 41, 41);
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    background-color: #EEDDCC;
+    place-content: center;
+    gap: 2rem;
+
+}
 .side_1--hero{
     display: grid;
     place-content: center;
@@ -74,14 +86,7 @@
     place-items: start;
 
 }
-.hero{
-    padding: 4rem 1rem;
-    color: rgb(75, 41, 41);
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-    place-content: center;
-    gap: 2rem;
-}
+
 .side_1--hero h1{
     font-size: 3.2rem;
     font-family: Georgia, 'Times New Roman', Times, serif;
@@ -125,12 +130,71 @@
     justify-self: center;
     border-bottom-left-radius: 7rem ;
 }
+
+
+.new_collection{
+    background-color: rgba(150, 147, 147, 0.178);
+    text-align: center;
+    padding: 2rem 7rem;
+}
+.new_collection h2{
+    font-size: 3rem;
+    color: black;
+    font-weight: 600;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+.new_collection p{
+    font-size: 1.2rem;
+}
+.img__grid{
+    display: grid;
+    gap: 1rem;
+    padding-top: 2rem;
+    grid-template-columns: repeat(3,1fr);
+}
+.img__grid img{
+    width: 90%;
+}
+.loadmore{
+    margin-top: 2rem;
+}
+
+@media screen and (max-width:1024px ) {
+    
+    .hero{
+        grid-template-columns: 1fr 1fr;
+    }    
+    .side_1--hero h1{
+        font-size: 2.9rem;
+        padding-bottom: .5rem;
+        
+    
+    }
+    .side_1--hero p{
+        line-height: 1.4;
+    }
+    .side_2--hero{
+        display: grid;
+        position: relative;
+        place-content: center;
+    
+    }
+    .side_2--hero img{
+        width: 340px;
+        height: 350px;
+    }
+    
+    
+}
+
 /* media query for 968px */
 @media screen and (max-width:968px ) {
-.app{
-    padding: .7rem 1.5rem;
-}
-    
+    .nav__container{
+        padding: .7rem 3rem;
+    }
+    .hero{
+        padding: .7rem 1.5rem;
+    }
 .toogle{
     display: flex;
     z-index: 1;
@@ -140,15 +204,15 @@
     position: absolute;
     flex-direction: column;
     justify-content: center;
-    height: 100%;
+    height: 100vh;
     top: 0;
-    left: 0;
     bottom: 0;
     right: 0;
-    width: 100%;
+    width: 100vw;
     background-color: #EEDDCC;
     padding-bottom: 4rem;
     transition: all .15s ease-in;
+    z-index: 1;
  }   
  .nav__links{
     flex-direction: column;
@@ -163,4 +227,45 @@
  .open_nav{
     display: flex;
  }
+ 
+}
+@media screen and (max-width:768px ) {
+    .hero{
+        padding: 10rem 1rem 1rem 1rem;
+        grid-template-columns: 1fr;
+        gap: 3rem;
+        text-align: center;
+    }
+    .side_1--hero{
+        place-content: center;
+        margin-top: 0;
+        padding: 0 1rem;
+        place-items: center;
+    
+    }
+    .side_2--hero{
+        padding: 0 1rem;
+
+    }
+    
+    .side_1--hero h1{
+        font-size: 3.4rem;    
+    }
+    .side_1--hero p{
+        font-size: 1.2rem;
+    }
+    .side_2--hero img{
+        width: 420px;
+        height: 430px;
+        border-bottom-left-radius: 6rem ;
+    }
+}
+
+@media screen and (max-width:425px ) {
+    .side_2--hero img{
+        width: 270px;
+        height: 280px;
+        border-bottom-left-radius: 6rem ;
+    }
+
 }
