made the new collection reponsive

--- a/src/index.css
+++ b/src/index.css
@@ -227,7 +227,23 @@
  .open_nav{
     display: flex;
  }
- 
+ .new_collection{
+    padding: 2rem 1.5rem;
+}
+.new_collection h2{
+    font-size: 2.5rem;
+}
+.img__grid{
+    gap: 0rem;
+    padding-top: 1.5rem;
+}
+.img__grid img{
+    width: 90%;
+}
+.loadmore{
+    margin-top: 1.5rem;
+}
+
 }
 @media screen and (max-width:768px ) {
     .hero{
@@ -267,5 +283,25 @@
         height: 280px;
         border-bottom-left-radius: 6rem ;
     }
-
+    .new_collection{
+        padding: 2rem  1rem;
+    }
+    .new_collection h2{
+        font-size: 1.4rem;
+    }
+    .new_collection p{
+        font-size: 1rem;
+    }
+    .img__grid{
+        gap: 2rem;
+        place-items: center;
+        grid-template-columns: 1fr;
+    }
+    .img__grid img{
+        width: 100%;
+    }
+    .loadmore{
+        margin-top: 1.5rem;
+    }
+    
 }
