--- a/src/index.css
+++ b/src/index.css
@@ -199,7 +199,7 @@
         display: grid;
         grid-template-columns: repeat(3,1fr);
         gap: 5rem;
-        background-color: #EEDDCC;
+        background-color: #eeddcc9d;
         text-align: center;
         padding: 1rem 3rem;
         place-items: center;
@@ -220,6 +220,52 @@
         padding-top: .3rem;
         font-weight: 400;
         font-size: 1rem;
+    }
+    .deal_of_the_day{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        padding: 4rem 7rem;
+        gap: 4rem;
+        color: #4b2929;
+        background-color: #eeddccc4;
+    }
+    .deal__left h2{
+        font-size: 2rem;
+        font-weight: 600;
+        padding: 1rem 0;
+
+    }
+    .deal__left p{
+        font-size: 1.2rem;
+        padding: 0rem 4rem 1rem 0;
+        line-height: 1.4;
+
+    }
+    .times{
+        display: flex;
+        gap: 2rem;
+        padding-bottom: 1rem;
+    }
+    .time{
+        font-size: 1.3rem;
+        font-weight: 700;
+        padding: 1rem;
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        background-color: white;
+
+    }
+    .time span{
+        font-weight: normal;
+    }
+    .deal-right{
+        display: flex;
+        justify-content: center;
+    }
+    .deal-right img{
+        width: 350px;
+
     }
 @media screen and (max-width:1024px ) {
     
@@ -338,7 +384,7 @@
 }
 @media screen and (max-width:768px ) {
     .hero{
-        padding: 10rem 1rem 1rem 1rem;
+        padding: 5rem 0rem 1rem 0rem;
         grid-template-columns: 1fr;
         gap: 3rem;
         text-align: center;
@@ -356,10 +402,10 @@
     }
     
     .side_1--hero h1{
-        font-size: 3.4rem;    
+        font-size: 2rem;    
     }
     .side_1--hero p{
-        font-size: 1.2rem;
+        font-size: 1rem;
     }
     .side_2--hero img{
         width: 420px;
@@ -430,7 +476,7 @@
         gap: 1rem;
     }
     .best__left img{
-        width: 80%;
+        width: 90%;
         height: 400px;
         border-top-left-radius: 5rem;
     }
@@ -462,8 +508,5 @@
     .stat span{
         padding-top: 0;
         font-size: 1rem;
-    }
-
-    
-    
+    }   
 }
