--- a/src/index.css
+++ b/src/index.css
@@ -198,10 +198,10 @@
     .stats{
         display: grid;
         grid-template-columns: repeat(3,1fr);
-        gap: 5rem;
+        gap: 4rem;
         background-color: #eeddcc9d;
         text-align: center;
-        padding: 1rem 3rem;
+        padding: 1rem 2.5rem;
         place-items: center;
         position: absolute;
         bottom: 0;
@@ -293,6 +293,23 @@
     }
     .price{
         padding-bottom:.2rem ;
+    }
+
+    .footer{
+        padding: 2rem 7rem;
+        text-align: center;
+    }
+    .footer .logo{
+        font-size: 2rem;
+        padding: 1rem 0;
+    }
+    .footer .list{
+        display: flex;
+        flex-wrap: nowrap;
+        justify-content: center;
+        list-style: none;
+        gap: 2rem;
+        font-size: 1.2rem
     }
 @media screen and (max-width:1024px ) {
     
@@ -416,7 +433,9 @@
     place-items: center;
     gap: 4rem;
 }
-
+.deal_of_the_day{
+    padding: 2rem 3rem
+}
 }
 @media screen and (max-width:768px ) {
     .hero{
@@ -479,9 +498,11 @@
         }    
 
         .deal_of_the_day{
-            grid-template-columns: 1fr 1fr;
+            grid-template-columns: 1fr ;
             padding: 4rem 2rem;
             gap: 2rem;
+            text-align: center;
+
         }
         .deal__left h2{
             font-size: 1.7rem;
@@ -493,6 +514,7 @@
         }
         .times{
             gap: 1rem;
+            justify-content: center;
         }
         .time{
             font-size: 1.1rem;
@@ -502,6 +524,22 @@
             width: 300px;
     
         }
+
+        .products{
+            padding: 2rem 1rem;
+        }
+        .product__card img{
+            width: 200px;
+        }
+        .cards{
+            grid-template-columns: repeat(2,1fr);
+            gap: 1rem;
+        }
+        .card__details{
+            font-size: 1rem;
+        }
+    
+    
 }
 
 @media screen and (max-width:425px ) {
@@ -599,4 +637,12 @@
         gap: 2rem;
     }
     
+    .footer{
+        padding: 2rem 2rem;
+    }
+    .footer .list{
+        flex-direction: column;
+        gap: 1rem;
+        font-size: 1rem
+    }
 }
